--- a/chat.html
+++ b/chat.html
@@ -20,176 +20,55 @@
 body { font-family:Arial, sans-serif; background:var(--color-bg-light); }
 
 /* HEADER */
-header {
-  background:#fff;
-  padding:10px;
-  border-bottom:1px solid #ddd;
-  display:flex;
-  align-items:center;
-  gap:8px;
-  position:fixed;
-  top:0; left:0; right:0;
-  z-index:10;
-}
+header { background:#fff; padding:10px; border-bottom:1px solid #ddd; display:flex; align-items:center; gap:8px; position:fixed; top:0; left:0; right:0; z-index:10; }
 header h1 { color:var(--color-primary); font-size:1.3em; display:flex; align-items:center; gap:6px; }
 .emoji-head { width:28px; }
 
 /* TOPBAR */
-#topBar {
-  display:flex;
-  gap:8px;
-  padding:8px;
-  background:#fafafa;
-  border-bottom:1px solid #ddd;
-  margin-top:50px;
-  flex-wrap:wrap;
-  justify-content:center;
-}
-#topBar button {
-  background:white;
-  color:var(--color-primary);
-  border:1px solid var(--color-primary);
-  border-radius:5px;
-  padding:6px 10px;
-  cursor:pointer;
-  transition:0.3s;
-}
-#topBar button:hover { background:var(--color-primary-hover); color:#fff; }
+#topBar { display:flex; gap:8px; padding:8px; background:#fafafa; border-bottom:1px solid #ddd; margin-top:50px; flex-wrap:wrap; justify-content:space-between; align-items:center; }
+#topBar button { background:white; color:var(--color-primary); border:1px solid var(--color-primary); border-radius:5px; padding:6px 10px; cursor:pointer; }
+#topBar span { font-size:0.9em; }
 
 /* MAIN */
 #mainContent { display:flex; height:calc(100vh - 130px); }
 
 /* USERLIST */
-#userList {
-  width:200px;
-  background:white;
-  border-right:1px solid #ddd;
-  overflow-y:auto;
-}
-.userItem {
-  display:flex;
-  align-items:center;
-  gap:6px;
-  padding:6px;
-  cursor:pointer;
-  border-radius:5px;
-  margin:4px;
-}
+#userList { width:200px; background:white; border-right:1px solid #ddd; overflow-y:auto; }
+.userItem { display:flex; align-items:center; gap:6px; padding:6px; cursor:pointer; border-radius:5px; margin:4px; }
 .userItem:hover { background:#e8f8ee; }
 .userItem img { width:28px; height:28px; border-radius:50%; }
 
 /* CHAT */
-#chatContainer {
-  flex:1;
-  display:flex;
-  flex-direction:column;
-  background:white;
-  border-left:1px solid #ddd;
-}
-#chatHeader {
-  padding:6px;
-  background:#fafafa;
-  border-bottom:1px solid #ddd;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-}
+#chatContainer { flex:1; display:flex; flex-direction:column; background:white; border-left:1px solid #ddd; }
+#chatHeader { padding:6px; background:#fafafa; border-bottom:1px solid #ddd; display:flex; justify-content:space-between; align-items:center; }
 #chatHeader h2 { font-size:1em; color:#333; }
 #chatWindow { flex:1; overflow-y:auto; padding:10px; display:flex; flex-direction:column; }
-.msg {
-  margin:5px 0;
-  padding:8px;
-  border-radius:8px;
-  max-width:80%;
-  word-wrap:break-word;
-  position:relative;
-}
+.msg { margin:5px 0; padding:8px; border-radius:8px; max-width:80%; word-wrap:break-word; position:relative; }
 .userMsg { background:#e0f7e9; align-self:flex-end; text-align:right; }
 .otherMsg { background:#fff8dc; align-self:flex-start; text-align:left; }
-.msg .deleteBtn {
-  position:absolute;
-  top:2px;
-  right:5px;
-  font-size:0.8em;
-  color:red;
-  cursor:pointer;
-  display:none;
-}
-.userMsg:hover .deleteBtn { display:inline; }
+.msg small { display:block; font-size:0.7em; color:#666; margin-top:4px; }
+
+/* DELETE BUTTON */
+.deleteBtn { position:absolute; bottom:2px; right:4px; background:transparent; border:none; color:red; cursor:pointer; font-size:0.7em; display:none; }
+.msg:hover .deleteBtn { display:inline; }
 
 /* INPUT */
-#chatInput { display:flex; border-top:1px solid #ddd; background:#fff; }
-#chatInput input {
-  flex:1;
-  padding:10px;
-  border:none;
-  outline:none;
-}
-#chatInput button {
-  background:var(--color-primary);
-  color:white;
-  border:none;
-  padding:10px 15px;
-  cursor:pointer;
-}
+#chatInput { display:flex; border-top:1px solid #ddd; }
+#chatInput input { flex:1; padding:10px; border:none; outline:none; }
+#chatInput button { background:var(--color-primary); color:white; border:none; padding:10px 15px; cursor:pointer; }
 
 /* ADS */
-#adSidebar {
-  width:250px;
-  background:#f7f7f7;
-  border-left:1px dashed #ccc;
-  text-align:center;
-  padding:8px;
-}
+#adSidebar { width:250px; background:#f7f7f7; border-left:1px dashed #ccc; text-align:center; padding:8px; }
 
-
-/* NOTIFICAÇÕES */
-#notificationContainer {
-  position:fixed;
-  top:70px;
-  right:10px;
-  display:flex;
-  flex-direction:column;
-  gap:10px;
-  z-index:200;
-}
-.notification {
-  background:#4CAF50;
-  color:white;
-  padding:10px;
-  border-radius:8px;
-  box-shadow:0 2px 6px rgba(0,0,0,0.2);
-  animation:slideIn 0.3s ease;
-}
-@keyframes slideIn {
-  from { opacity:0; transform:translateX(50px); }
-  to { opacity:1; transform:translateX(0); }
-}
 
 /* MOBILE */
 @media(max-width:768px){
   #mainContent { flex-direction:column; height:auto; }
   #adSidebar { display:none; }
-  #chatContainer { height:calc(100vh - 270px); } /* Reduzido para exibir input */
-  #userList {
-    position:fixed;
-    top:100px;
-    left:0;
-    right:0;
-    height:220px;
-    border:1px solid #ccc;
-    background:white;
-    display:none;
-    z-index:20;
-  }
-  #toggleUsers {
-    background:var(--color-primary);
-    color:white;
-    border:none;
-    padding:6px 10px;
-    border-radius:5px;
-  }
-
+  #userList { width:100%; order:-1; display:flex; overflow-x:auto; border-bottom:1px solid #ddd; }
+  .userItem { flex:0 0 auto; margin:2px; padding:4px; }
+  footer { position:fixed; bottom:0; left:0; right:0; }
+}
 </style>
 </head>
 <body>
@@ -199,12 +78,11 @@ header h1 { color:var(--color-primary); font-size:1.3em; display:flex; align-ite
 </header>
 
 <div id="topBar">
-  <button onclick="window.location.href='index.html'">🏠 Início</button>
-  <button onclick="history.back()">⬅️ Voltar</button>
-  <button id="loginBtn">Login com Google</button>
-  <button id="logoutBtn" style="display:none;">Logout</button>
-  <button id="generalBtn" style="display:none;">💬 Bate-papo Geral</button>
-  <button id="toggleUsers" style="display:none;">👥 Usuários</button>
+  <div>
+    <button id="loginBtn">Login com Google</button>
+    <button id="logoutBtn" style="display:none;">Logout</button>
+    <button id="generalBtn" style="display:none;">💬 Bate-papo Geral</button>
+  </div>
   <span id="onlineCount">👥 Usuários online: 0</span>
 </div>
 
@@ -214,10 +92,6 @@ header h1 { color:var(--color-primary); font-size:1.3em; display:flex; align-ite
   <div id="chatContainer">
     <div id="chatHeader">
       <h2 id="chatTitle">💬 Bate-papo Geral</h2>
-      <div>
-        <button id="clearBtn">Apagar</button>
-        <button id="blockBtn">Bloquear</button>
-      </div>
     </div>
     <div id="chatWindow"></div>
     <div id="chatInput">
@@ -230,47 +104,38 @@ header h1 { color:var(--color-primary); font-size:1.3em; display:flex; align-ite
 </div>
 
 
-<div id="notificationContainer"></div>
 <audio id="msgSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_2a8c4e8d5a.mp3?filename=message-pop-alert-23584.mp3" preload="auto"></audio>
 
 <script>
-const firebaseConfig={apiKey:"AIzaSyCYJCgfil5HKrCWtB14zwdicDaEcldHU6A",
-authDomain:"dimitry-rusian.firebaseapp.com",
-databaseURL:"https://dimitry-rusian-default-rtdb.firebaseio.com",
-projectId:"dimitry-rusian",
-storageBucket:"dimitry-rusian.appspot.com",
-messagingSenderId:"449029666805",
-appId:"1:449029666805:web:feaf575a7b7e6f234a52bc"};
+const firebaseConfig = {
+  apiKey: "AIzaSyCYJCgfil5HKrCWtB14zwdicDaEcldHU6A",
+  authDomain: "dimitry-rusian.firebaseapp.com",
+  databaseURL: "https://dimitry-rusian-default-rtdb.firebaseio.com",
+  projectId: "dimitry-rusian",
+  storageBucket: "dimitry-rusian.appspot.com",
+  messagingSenderId: "449029666805",
+  appId: "1:449029666805:web:feaf575a7b7e6f234a52bc"
+};
 firebase.initializeApp(firebaseConfig);
-const auth=firebase.auth(),db=firebase.database();
 
-const loginBtn=document.getElementById("loginBtn"),
-logoutBtn=document.getElementById("logoutBtn"),
-generalBtn=document.getElementById("generalBtn"),
-toggleUsers=document.getElementById("toggleUsers"),
-userList=document.getElementById("userList"),
-msgInput=document.getElementById("msgInput"),
-sendBtn=document.getElementById("sendBtn"),
-chatWindow=document.getElementById("chatWindow"),
-chatTitle=document.getElementById("chatTitle"),
-clearBtn=document.getElementById("clearBtn"),
-blockBtn=document.getElementById("blockBtn"),
-msgSound=document.getElementById("msgSound"),
-notificationContainer=document.getElementById("notificationContainer"),
-onlineCount=document.getElementById("onlineCount");
+const auth = firebase.auth();
+const db = firebase.database();
 
-let currentUser=null,currentChat="chatGlobal",blocked={},currentPartner=null;
-let titleFlashing=false,flashInterval=null,originalTitle=document.title;
+const loginBtn = document.getElementById("loginBtn");
+const logoutBtn = document.getElementById("logoutBtn");
+const generalBtn = document.getElementById("generalBtn");
+const userList = document.getElementById("userList");
+const msgInput = document.getElementById("msgInput");
+const sendBtn = document.getElementById("sendBtn");
+const chatWindow = document.getElementById("chatWindow");
+const chatTitle = document.getElementById("chatTitle");
+const msgSound = document.getElementById("msgSound");
+const onlineCount = document.getElementById("onlineCount");
 
-function showNotification(user,chatType){
-  const n=document.createElement("div");
-  n.className="notification";
-  n.textContent=`📩 Nova mensagem de ${user} (${chatType})`;
-  notificationContainer.appendChild(n);
-  setTimeout(()=>n.remove(),4000);
-  msgSound.currentTime=0; msgSound.play();
-}
+let currentUser=null, currentChat="chatGlobal", currentPartner=null;
+let chatListener=null;
 
+// LOGIN
 loginBtn.onclick=()=>auth.signInWithPopup(new firebase.auth.GoogleAuthProvider());
 logoutBtn.onclick=()=>auth.signOut();
 
@@ -280,89 +145,92 @@ auth.onAuthStateChanged(u=>{
     loginBtn.style.display="none";
     logoutBtn.style.display="inline-block";
     generalBtn.style.display="inline-block";
-    toggleUsers.style.display="inline-block";
     msgInput.disabled=false;
     sendBtn.disabled=false;
-
-    db.ref("users/"+u.uid).set({name:u.displayName,photo:u.photoURL});
-    db.ref("online/"+u.uid).set(true);
+    db.ref("online/"+u.uid).set({name:u.displayName,photo:u.photoURL});
     db.ref("online/"+u.uid).onDisconnect().remove();
-
     updateUsers();
     openGlobal();
-  }else{
+  } else {
     currentUser=null;
     loginBtn.style.display="inline-block";
     logoutBtn.style.display="none";
     generalBtn.style.display="none";
-    toggleUsers.style.display="none";
     msgInput.disabled=true;
     sendBtn.disabled=true;
     chatWindow.innerHTML="";
-    userList.innerHTML="";
-    onlineCount.textContent="👥 Usuários online: 0";
+    updateUsers();
   }
 });
 
-toggleUsers.onclick=()=>{
-  userList.style.display=(userList.style.display==="block")?"none":"block";
-};
-
+// LISTA DE USUÁRIOS ONLINE
 function updateUsers(){
-  db.ref("users").on("value",snap=>{
+  db.ref("online").on("value",snap=>{
     const data=snap.val()||{};
     userList.innerHTML="";
-    db.ref("online").once("value").then(onSnap=>{
-      const online=onSnap.val()||{};
-      const totalOnline=Object.keys(online).length;
-      onlineCount.textContent="👥 Usuários online: "+totalOnline;
-      for(const [uid,u] of Object.entries(data)){
-        if(currentUser && uid===currentUser.uid) continue;
-        const div=document.createElement("div");
-        const status=online[uid]?"🟢":"⚪";
-        div.className="userItem";
-        div.innerHTML=`<img src="${u.photo}"><span>${status} ${u.name}</span>`;
-        div.onclick=()=>openPrivate(uid,u.name);
-        userList.appendChild(div);
-      }
-    });
+    onlineCount.textContent="👥 Usuários online: "+Object.keys(data).length;
+    for(const [uid,u] of Object.entries(data)){
+      if(currentUser && uid===currentUser.uid) continue;
+      const div=document.createElement("div");
+      div.className="userItem";
+      div.innerHTML=`<img src="${u.photo}"><span>${u.name}</span>`;
+      div.onclick=()=>openPrivate(uid,u.name);
+      userList.appendChild(div);
+    }
   });
 }
 
+// LIMPA OUVINTES
+function clearChatListener(){
+  if(chatListener){ chatListener.off(); chatListener=null; }
+}
+
+// ABRIR CHAT GERAL
 function openGlobal(){
+  clearChatListener();
   currentChat="chatGlobal";
   currentPartner=null;
   chatTitle.textContent="💬 Bate-papo Geral";
   chatWindow.innerHTML="";
-  db.ref("chatGlobal").off();
-  db.ref("chatGlobal").limitToLast(100).on("child_added",snap=>{
-    const m=snap.val();
-    renderMsg(snap.key,m);
-    if(m.uid!==currentUser?.uid) showNotification(m.user,"Geral");
-  });
+  chatListener=db.ref("chatGlobal");
+  chatListener.on("child_added",snap=>renderMsg(snap.key,snap.val()));
 }
 
+// ABRIR CHAT PRIVADO
+function openPrivate(uid,name){
+  clearChatListener();
+  currentPartner=uid;
+  currentChat="private/"+[currentUser.uid,uid].sort().join("_");
+  chatTitle.textContent="👤 "+name;
+  chatWindow.innerHTML="";
+  chatListener=db.ref(currentChat);
+  chatListener.on("child_added",snap=>renderMsg(snap.key,snap.val()));
+}
+
+// RENDER MENSAGEM
 function renderMsg(key,m){
   const div=document.createElement("div");
   div.className=m.uid===currentUser?.uid?"msg userMsg":"msg otherMsg";
-  div.innerHTML=`<b>${m.user}</b>: ${m.text}`;
+  div.innerHTML=`<strong>${m.user}</strong>: ${m.text}<small>${new Date(m.timestamp).toLocaleTimeString()}</small>`;
   if(m.uid===currentUser?.uid){
-    const del=document.createElement("span");
-    del.className="deleteBtn";
-    del.textContent="❌";
-    del.onclick=()=>deleteMsg(key);
-    div.appendChild(del);
+    const btn=document.createElement("button");
+    btn.textContent="🗑";
+    btn.className="deleteBtn";
+    btn.onclick=()=>deleteMsg(key);
+    div.appendChild(btn);
   }
   chatWindow.appendChild(div);
   chatWindow.scrollTop=chatWindow.scrollHeight;
+  if(m.uid!==currentUser?.uid){ msgSound.currentTime=0; msgSound.play(); alert(`Nova mensagem de ${m.user}`); }
 }
 
+// ENVIAR
 sendBtn.onclick=sendMsg;
 msgInput.addEventListener("keypress",e=>{if(e.key==="Enter")sendMsg();});
 function sendMsg(){
-  if(!currentUser)return;
+  if(!currentUser) return;
   const text=msgInput.value.trim();
-  if(!text)return;
+  if(!text) return;
   db.ref(currentChat).push({
     uid:currentUser.uid,
     user:currentUser.displayName,
@@ -372,20 +240,23 @@ function sendMsg(){
   msgInput.value="";
 }
 
+// APAGAR (somente autor)
 function deleteMsg(key){
-  db.ref(currentChat+"/"+key).once("value").then(snap=>{
-    const msg=snap.val();
-    if(msg && msg.uid===currentUser.uid){
+  if(!currentUser) return;
+  db.ref(currentChat+"/"+key).once("value",snap=>{
+    const val=snap.val();
+    if(val && val.uid===currentUser.uid){
       db.ref(currentChat+"/"+key).remove();
-      alert("Mensagem apagada com sucesso.");
-    }else{
+      chatWindow.innerHTML="";
+      chatListener.off();
+      chatListener.on("child_added",snap=>renderMsg(snap.key,snap.val()));
+    } else {
       alert("Você só pode apagar suas próprias mensagens.");
     }
   });
 }
 
-clearBtn.onclick=()=>chatWindow.innerHTML="";
-blockBtn.onclick=()=>alert("Função de bloqueio apenas em chats privados.");
+// BOTÃO GERAL
 generalBtn.onclick=openGlobal;
 </script>
 
